// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/action_button/ActionButton should colour the button for style #0000ff (hasVoted: false) 1`] = `
<DocumentFragment>
  <button
    class="sc-bdvwhi kHsjOL btn btn-sm"
    data-action-id="action_id1"
  >
    mockMessageHtmlToComponent(mockFormatText(action_name))
  </button>
</DocumentFragment>
`;

exports[`components/action_button/ActionButton should colour the button for style danger (hasVoted: false) 1`] = `
<DocumentFragment>
  <button
    class="sc-bdvwhi eBdVFm btn btn-sm"
    data-action-id="action_id1"
  >
    mockMessageHtmlToComponent(mockFormatText(action_name))
  </button>
</DocumentFragment>
`;

exports[`components/action_button/ActionButton should colour the button for style default (hasVoted: false) 1`] = `
<DocumentFragment>
  <button
    class="sc-bdvwhi iOmfzy btn btn-sm"
    data-action-id="action_id1"
  >
    mockMessageHtmlToComponent(mockFormatText(action_name))
  </button>
</DocumentFragment>
`;

exports[`components/action_button/ActionButton should colour the button for style default (hasVoted: true) 1`] = `
<DocumentFragment>
  <button
    class="sc-bdvwhi lmSELX btn btn-sm"
    data-action-id="action_id1"
  >
    mockMessageHtmlToComponent(mockFormatText(action_name))
  </button>
</DocumentFragment>
`;

exports[`components/action_button/ActionButton should colour the button for style good (hasVoted: false) 1`] = `
<DocumentFragment>
  <button
    class="sc-bdvwhi fduMYz btn btn-sm"
    data-action-id="action_id1"
  >
    mockMessageHtmlToComponent(mockFormatText(action_name))
  </button>
</DocumentFragment>
`;

exports[`components/action_button/ActionButton should colour the button for style primary (hasVoted: false) 1`] = `
<DocumentFragment>
  <button
    class="sc-bdvwhi ipGpcd btn btn-sm"
    data-action-id="action_id1"
  >
    mockMessageHtmlToComponent(mockFormatText(action_name))
  </button>
</DocumentFragment>
`;

exports[`components/action_button/ActionButton should colour the button for style warning (hasVoted: false) 1`] = `
<DocumentFragment>
  <button
    class="sc-bdvwhi iSsuyj btn btn-sm"
    data-action-id="action_id1"
  >
    mockMessageHtmlToComponent(mockFormatText(action_name))
  </button>
</DocumentFragment>
`;

exports[`components/action_button/ActionButton should render the action name and carry its ids 1`] = `
<DocumentFragment>
  <button
    class="sc-bdvwhi feigpc btn btn-sm"
    data-action-id="action_id1"
  >
    mockMessageHtmlToComponent(mockFormatText(action_name))
  </button>
</DocumentFragment>
`;
